<resources>
    <string name="app_name">TikTalk</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add image</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="others">Others</string>
    <string name="notifications">Notifications</string>
    <string name="archive">Archive</string>
    <string name="home">Home</string>
    <string name="sign_out">Sign Out</string>
    <string name="block">Block</string>
    <string name="hello_blank_fragment">a</string>
    <string name="data_not_found">Data not found</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="birth_date">Birth Date</string>
    <string name="send_images">Send Images</string>
    <string name="send_video">Send Video</string>
    <string name="settings">Settings</string>
    <string name="please_enter_your_email_address_in_the_field_provided_below">Please enter your email address in the field provided below.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="done">Done</string>
    <string name="agree">Agree</string>
    <string name="back_to_login">Back to Login</string>
    <string name="forgot_password1">Forgot Password ?</string>
    <string name="change_password">Change Password</string>
    <string name="update_password">Update Password</string>
</resources>