<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    android:background="@drawable/background_gradients"
    tools:context=".activities.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/forgot_password"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/please_enter_your_email_address_in_the_field_provided_below"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:animateLayoutChanges="true">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCheck"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/agree"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp"
                app:backgroundTint="@color/button_login"
                android:alpha="0.8"/>

            <ProgressBar
                android:id="@+id/progressBarCheck"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"/>
        </FrameLayout>



        <TextView
            android:id="@+id/textCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_48sdp"
            android:text="Please enter the confirmation code here"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/codeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_code1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/background_input"
                android:inputType="number"
                android:maxLength="1"
                android:nextFocusDown="@+id/et_code2"
                android:gravity="center"/>

            <EditText
                android:id="@+id/et_code2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/background_input"
                android:inputType="number"
                android:maxLength="1"
                android:nextFocusDown="@+id/et_code3"
                android:gravity="center"/>

            <EditText
                android:id="@+id/et_code3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/background_input"
                android:inputType="number"
                android:maxLength="1"
                android:nextFocusDown="@+id/et_code4"
                android:gravity="center"/>

            <EditText
                android:id="@+id/et_code4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/background_input"
                android:inputType="number"
                android:maxLength="1"
                android:gravity="center"/>
        </LinearLayout>
        <FrameLayout
            android:id="@+id/doneButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:animateLayoutChanges="true"
            android:visibility="gone">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp"
                app:backgroundTint="@color/button_login"
                android:alpha="0.8"/>

            <ProgressBar
                android:id="@+id/progressBarDone"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"/>
        </FrameLayout>
        <TextView
            android:id="@+id/backToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_24sdp"
            android:textColor="@color/primary_text"
            />

    </LinearLayout>

</ScrollView>